--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,12 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.twitter4j</groupId>
+      <artifactId>twitter4j-core</artifactId>
+      <version>3.0.5</version>
+    </dependency>
+
     <!-- Add your own dependencies here, if in compile scope, they are added to the jar -->
 
   </dependencies>
