--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,13 @@
       <version>3.0.5</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.camunda.bpm.extension</groupId>
+      <artifactId>camunda-bpm-process-test-coverage-junit5</artifactId>
+      <version>1.0.0</version>
+      <scope>test</scope>
+    </dependency>
+
     <!-- Add your own dependencies here, if in compile scope, they are added to the jar -->
 
   </dependencies>
